--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "messaging",
     "api"
   ],
-  "homepage": "https://github.com/jperichon/mogreet-php",
+  "homepage": "https://github.com/impeto/mogreet-php",
   "license": "MIT",
   "authors": [
     {
@@ -18,7 +18,16 @@
     }
   ],
   "require": {
-    "php": ">=5.2",
+    "php": ">=5.5",
     "ext-curl": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Mogreet\\": "lib/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.3",
+    "vlucas/phpdotenv": "^2.2"
   }
 }
