--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.3",
-    "vlucas/phpdotenv": "^2.2"
+    "vlucas/phpdotenv": "^2.2",
+    "illuminate/support": "^5.2"
   }
 }
